[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/score_keeper.gd" type="Script" id=1]
[ext_resource path="res://scenes/DialogueBoxHolder.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/dream.gd" type="Script" id=3]
[ext_resource path="res://scenes/elements/background_color.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/Tree Pieces/Birch/0001.png" type="Texture" id=5]
[ext_resource path="res://art/Tree Pieces/Fir/0001.png" type="Texture" id=6]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=7]
[ext_resource path="res://art/dc0dw0y-6473555f-a449-4ca2-a519-7522693e870e.jpg" type="Texture" id=8]
[ext_resource path="res://art/faces/protester.png" type="Texture" id=9]
[ext_resource path="res://art/tools_header.png" type="Texture" id=10]
[ext_resource path="res://art/tool.png" type="Texture" id=11]
[ext_resource path="res://art/screen.png" type="Texture" id=12]
[ext_resource path="res://art/faces/boss_face.png" type="Texture" id=13]
[ext_resource path="res://art/Tree Pieces/Fir/0002.png" type="Texture" id=14]
[ext_resource path="res://art/Tree Pieces/Fir/0005.png" type="Texture" id=15]
[ext_resource path="res://art/Tree Pieces/Fir/0004.png" type="Texture" id=16]
[ext_resource path="res://art/Tree Pieces/Fir/0003.png" type="Texture" id=17]
[ext_resource path="res://art/faces/narrator_face.png" type="Texture" id=18]
[ext_resource path="res://art/Tools/tools_tape1.png" type="Texture" id=19]
[ext_resource path="res://ui/basic_theme_smaller.tres" type="Theme" id=20]
[ext_resource path="res://art/bg_shadow.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "cut",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "appears"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.046875, 0.046875 ), Vector2( 0.1875, 0.1875 ), Vector2( 0.46875, 0.46875 ), Vector2( 0.75, 0.75 ), Vector2( 1.3125, 1.3125 ), Vector2( 1.875, 1.875 ), Vector2( 2.4375, 2.4375 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 0.625 ), Color( 1, 1, 1, 0.5625 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 0.625 ), Color( 1, 1, 1, 0.75 ), Color( 1, 1, 1, 0.875 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Animation" id=2]
resource_name = "increase_scale"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1 ),
"transitions": PoolRealArray( 0.450625, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2.82843, 1, 1, 1, 0.5, 1, 1, 1, 1, 1, 0.707107 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.368, 0.368 ), Vector2( 0.468652, 0.468652 ), Vector2( 0.56007, 0.56007 ), Vector2( 0.651489, 0.651489 ), Vector2( 0.742907, 0.742907 ), Vector2( 0.834326, 0.834326 ), Vector2( 0.925744, 0.925744 ), Vector2( 1.01716, 1.01716 ), Vector2( 1.10858, 1.10858 ), Vector2( 1.2, 1.2 ), Vector2( 1.19405, 1.19405 ), Vector2( 1.15776, 1.15776 ), Vector2( 1.02888, 1.02888 ), Vector2( 0.9, 0.9 ), Vector2( 0.941667, 0.941667 ), Vector2( 0.955556, 0.955556 ), Vector2( 0.966667, 0.966667 ), Vector2( 0.977778, 0.977778 ), Vector2( 0.988889, 0.988889 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "increase_scale_larger"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 0.450625, 2.82843, 0.5, 0.707107 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.4, 2.4 ), Vector2( 1.8, 1.8 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "pump_scale"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="dream" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -668.0
margin_top = 93.0
margin_right = 1252.0
margin_bottom = 1173.0
texture = ExtResource( 8 )

[node name="BackgroundColor" parent="." instance=ExtResource( 4 )]
color = Color( 0.4, 0.588235, 0.00784314, 1 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="score_keeper" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 270, 345 )
scale = Vector2( 4.64844, 4.64844 )
texture = ExtResource( 5 )

[node name="dream_vision" type="AnimatedSprite" parent="."]
position = Vector2( 270, 345 )
scale = Vector2( 4.68, 4.68 )
frames = SubResource( 1 )

[node name="DialogueBoxHolder" parent="." instance=ExtResource( 2 )]

[node name="DialogueBox" parent="DialogueBoxHolder" index="0"]
play_on_start = false
play_sounds_in_batch = false
dialogue_path = "res://dialogue/dream.json"

[node name="Name" parent="DialogueBoxHolder/DialogueBox" index="3"]
margin_left = 4.0
margin_right = 223.0
margin_bottom = 41.0
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )
bbcode_text = "[right]NARRATOR"
text = "NARRATOR"

[node name="Text" parent="DialogueBoxHolder/DialogueBox" index="4"]
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )
bbcode_text = ""
text = ""

[node name="CharacterVoice" parent="DialogueBoxHolder/DialogueBox" index="8"]
yes_interruptions = true
character = "dream"

[node name="BossFace" type="Sprite" parent="."]
visible = false
position = Vector2( 162, 554 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="NarratorFace" type="Sprite" parent="."]
position = Vector2( 162, 553 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="Protester" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 282, 434 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Protester"]
playback_speed = 2.0
anims/appears = SubResource( 11 )

[node name="Visitor" type="Sprite" parent="."]
visible = false
position = Vector2( 162, 554 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 293.0
margin_right = 477.0
margin_bottom = 118.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 7 )

[node name="score_header" type="RichTextLabel" parent="MarginContainer2"]
margin_right = 184.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]SCORE[/center]"
text = "SCORE"
fit_content_height = true

[node name="VScrollBar2" type="VScrollBar" parent="MarginContainer2/score_header"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 40.0
step = 1.0
page = 40.0

[node name="VScrollBar3" type="VScrollBar" parent="MarginContainer2/score_header"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 576.0
margin_bottom = 1024.0
theme = ExtResource( 7 )

[node name="Header" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1024.0
margin_bottom = -847.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="Screen2" type="Sprite" parent="Control"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 483, 111 )
rotation = 3.14159
scale = Vector2( 1.25, -1 )
texture = ExtResource( 12 )

[node name="Tool_0" type="Sprite" parent="Control"]
visible = false
position = Vector2( 382, 174 )
texture = ExtResource( 11 )

[node name="Tool_1" type="Sprite" parent="Control"]
visible = false
position = Vector2( 582, 174 )
texture = ExtResource( 11 )

[node name="Tool_2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 782, 174 )
texture = ExtResource( 11 )

[node name="ToolsHeader" type="Sprite" parent="Control"]
visible = false
position = Vector2( 586, 62 )
texture = ExtResource( 10 )

[node name="score" type="RichTextLabel" parent="Control"]
margin_left = 289.0
margin_top = 83.0
margin_right = 545.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]10000[/center]"
text = "10000"
fit_content_height = true

[node name="VScrollBar2" type="VScrollBar" parent="Control/score"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 40.0
step = 1.0
page = 40.0

[node name="VScrollBar3" type="VScrollBar" parent="Control/score"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="Footer" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -174.0
margin_bottom = 3.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = -174.0
margin_right = -127.0
margin_bottom = -56.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="Tool_3" type="Sprite" parent="Control"]
position = Vector2( 287, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Tool_4" type="Sprite" parent="Control"]
position = Vector2( 387, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Tool_5" type="Sprite" parent="Control"]
position = Vector2( 487, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="ToolsHeader2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 389, 881 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Protester" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 938 )
texture = ExtResource( 9 )

[node name="Screen" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 939 )
texture = ExtResource( 12 )

[node name="tool_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 362.0
margin_top = 773.0
margin_right = 490.0
margin_bottom = 901.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 64, 64 )
theme = ExtResource( 20 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 19 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="tool_button"]
anims/increase_scale = SubResource( 2 )
anims/increase_scale_larger = SubResource( 3 )
anims/pump_scale = SubResource( 4 )

[node name="FadeOut" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.10352e-05
margin_right = 576.0
margin_bottom = 1024.0
mouse_filter = 2
color = Color( 0.00784314, 0.207843, 0.282353, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOut"]
autoplay = "fade_in"
anims/fade_in = SubResource( 12 )
anims/fade_out = SubResource( 13 )

[node name="TextureRect" type="TextureRect" parent="FadeOut"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 21 )
expand = true

[connection signal="dialog_box_closed" from="DialogueBoxHolder/DialogueBox" to="." method="_on_DialogueBox_dialog_box_closed"]
[connection signal="next_phrase_requested" from="DialogueBoxHolder/DialogueBox" to="." method="_on_DialogueBox_next_phrase_requested"]
[connection signal="pressed" from="tool_button" to="." method="_on_tool_button_pressed"]
[connection signal="animation_finished" from="tool_button/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="FadeOut/AnimationPlayer" to="." method="load_next_day"]

[editable path="DialogueBoxHolder"]
